--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,10 @@
 {
-    "name": "socket-server",
-    "version": "0.0.1",
-    "description": "socket.io server",
-    "dependencies": {
-        "express": "^4.13.4",
-        "socket.io": "^1.4.8"
-    }
+  "name": "socket-server",
+  "version": "0.0.1",
+  "description": "socket.io server",
+  "dependencies": {
+    "express": "^4.13.4",
+    "serialport": "^4.0.7",
+    "socket.io": "^1.4.8"
+  }
 }
